xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__dynamic_function_call_args.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"$foo(1 + 1, 3)\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    PostfixExpr {
                        primary: (
                            VarRef(
                                Name {
                                    name: "foo",
                                    namespace: None,
                                },
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: SourceOffset(
                                    4,
                                ),
                            },
                        ),
                        postfixes: [
                            ArgumentList(
                                [
                                    (
                                        Binary(
                                            BinaryExpr {
                                                operator: Add,
                                                left: PathExpr {
                                                    steps: [
                                                        (
                                                            PrimaryExpr(
                                                                (
                                                                    Literal(
                                                                        Integer(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    SourceSpan {
                                                                        offset: SourceOffset(
                                                                            5,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                            SourceSpan {
                                                                offset: SourceOffset(
                                                                    5,
                                                                ),
                                                                length: SourceOffset(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                },
                                                right: PathExpr {
                                                    steps: [
                                                        (
                                                            PrimaryExpr(
                                                                (
                                                                    Literal(
                                                                        Integer(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    SourceSpan {
                                                                        offset: SourceOffset(
                                                                            9,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                            SourceSpan {
                                                                offset: SourceOffset(
                                                                    9,
                                                                ),
                                                                length: SourceOffset(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                },
                                            },
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                5,
                                            ),
                                            length: SourceOffset(
                                                5,
                                            ),
                                        },
                                    ),
                                    (
                                        Path(
                                            PathExpr {
                                                steps: [
                                                    (
                                                        PrimaryExpr(
                                                            (
                                                                Literal(
                                                                    Integer(
                                                                        3,
                                                                    ),
                                                                ),
                                                                SourceSpan {
                                                                    offset: SourceOffset(
                                                                        12,
                                                                    ),
                                                                    length: SourceOffset(
                                                                        1,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                        SourceSpan {
                                                            offset: SourceOffset(
                                                                12,
                                                            ),
                                                            length: SourceOffset(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                12,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        ],
                    },
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            14,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            14,
        ),
    },
)
