xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__dynamic_function_call_placeholder.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"$foo(1, ?)\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    PrimaryExpr(
                        (
                            InlineFunction(
                                InlineFunction {
                                    params: [
                                        Param {
                                            name: Name {
                                                name: "placeholder0",
                                                namespace: None,
                                            },
                                            type_: None,
                                        },
                                    ],
                                    return_type: None,
                                    body: [
                                        (
                                            Path(
                                                PathExpr {
                                                    steps: [
                                                        (
                                                            PostfixExpr {
                                                                primary: (
                                                                    VarRef(
                                                                        Name {
                                                                            name: "foo",
                                                                            namespace: None,
                                                                        },
                                                                    ),
                                                                    0..4,
                                                                ),
                                                                postfixes: [
                                                                    ArgumentList(
                                                                        [
                                                                            (
                                                                                Path(
                                                                                    PathExpr {
                                                                                        steps: [
                                                                                            (
                                                                                                PrimaryExpr(
                                                                                                    (
                                                                                                        Literal(
                                                                                                            Integer(
                                                                                                                1,
                                                                                                            ),
                                                                                                        ),
                                                                                                        5..6,
                                                                                                    ),
                                                                                                ),
                                                                                                5..6,
                                                                                            ),
                                                                                        ],
                                                                                    },
                                                                                ),
                                                                                5..6,
                                                                            ),
                                                                            (
                                                                                Path(
                                                                                    PathExpr {
                                                                                        steps: [
                                                                                            (
                                                                                                PrimaryExpr(
                                                                                                    (
                                                                                                        VarRef(
                                                                                                            Name {
                                                                                                                name: "placeholder0",
                                                                                                                namespace: None,
                                                                                                            },
                                                                                                        ),
                                                                                                        0..0,
                                                                                                    ),
                                                                                                ),
                                                                                                0..0,
                                                                                            ),
                                                                                        ],
                                                                                    },
                                                                                ),
                                                                                0..0,
                                                                            ),
                                                                        ],
                                                                    ),
                                                                ],
                                                            },
                                                            0..0,
                                                        ),
                                                    ],
                                                },
                                            ),
                                            0..0,
                                        ),
                                    ],
                                },
                            ),
                            0..0,
                        ),
                    ),
                    0..10,
                ),
            ],
        },
    ),
    0..10,
)
