xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__element_test.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"self::element()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Self_,
                            node_test: KindTest(
                                Element(
                                    None,
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    0..15,
                ),
            ],
        },
    ),
    0..15,
)
