xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__float_lowercase_e.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\"1.5e0\")"
---
Double(
    OrderedFloat(
        1.5,
    ),
)
