xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__float_upper_e.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\"1.5E0\")"
---
Double(
    OrderedFloat(
        1.5,
    ),
)
