xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__for_loop.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"for $x in 1 to 2 return $x\")"
---
Spanned {
    value: For(
        ForExpr {
            var_name: Name {
                name: "x",
                namespace: None,
            },
            var_expr: Spanned {
                value: Binary(
                    BinaryExpr {
                        operator: Range,
                        left: PathExpr {
                            steps: [
                                Spanned {
                                    value: PrimaryExpr(
                                        Spanned {
                                            value: Literal(
                                                Integer(
                                                    "1",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    10,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                    ),
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            10,
                                        ),
                                        length: SourceOffset(
                                            1,
                                        ),
                                    },
                                },
                            ],
                        },
                        right: PathExpr {
                            steps: [
                                Spanned {
                                    value: PrimaryExpr(
                                        Spanned {
                                            value: Literal(
                                                Integer(
                                                    "2",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    15,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                    ),
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            15,
                                        ),
                                        length: SourceOffset(
                                            1,
                                        ),
                                    },
                                },
                            ],
                        },
                    },
                ),
                span: SourceSpan {
                    offset: SourceOffset(
                        10,
                    ),
                    length: SourceOffset(
                        7,
                    ),
                },
            },
            return_expr: Spanned {
                value: Path(
                    PathExpr {
                        steps: [
                            Spanned {
                                value: PrimaryExpr(
                                    Spanned {
                                        value: VarRef(
                                            Name {
                                                name: "x",
                                                namespace: None,
                                            },
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                24,
                                            ),
                                            length: SourceOffset(
                                                2,
                                            ),
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        24,
                                    ),
                                    length: SourceOffset(
                                        2,
                                    ),
                                },
                            },
                        ],
                    },
                ),
                span: SourceSpan {
                    offset: SourceOffset(
                        24,
                    ),
                    length: SourceOffset(
                        2,
                    ),
                },
            },
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            26,
        ),
    },
}
