xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__function_call.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"$foo()\")"
---
Path(
    PathExpr {
        steps: [
            PostfixExpr {
                primary: VarRef(
                    Name {
                        name: "foo",
                        namespace: None,
                    },
                ),
                postfixes: [
                    ArgumentList(
                        [],
                    ),
                ],
            },
        ],
    },
)
