xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__function_call_args.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"$foo(1 + 1, 3)\")"
---
Path(
    PathExpr {
        steps: [
            PostfixExpr {
                primary: VarRef(
                    Name {
                        name: "foo",
                        namespace: None,
                    },
                ),
                postfixes: [
                    ArgumentList(
                        [
                            Expr(
                                Binary(
                                    BinaryExpr {
                                        operator: Add,
                                        left: PathExpr {
                                            steps: [
                                                PrimaryExpr(
                                                    Literal(
                                                        Integer(
                                                            1,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                        right: PathExpr {
                                            steps: [
                                                PrimaryExpr(
                                                    Literal(
                                                        Integer(
                                                            1,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ),
                            Expr(
                                Path(
                                    PathExpr {
                                        steps: [
                                            PrimaryExpr(
                                                Literal(
                                                    Integer(
                                                        3,
                                                    ),
                                                ),
                                            ),
                                        ],
                                    },
                                ),
                            ),
                        ],
                    ),
                ],
            },
        ],
    },
)
