xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__if_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"if (1) then 2 else 3\")"
---
(
    If(
        IfExpr {
            condition: [
                (
                    Path(
                        PathExpr {
                            steps: [
                                (
                                    PrimaryExpr(
                                        (
                                            Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            4..5,
                                        ),
                                    ),
                                    4..5,
                                ),
                            ],
                        },
                    ),
                    4..5,
                ),
            ],
            then: (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                2,
                                            ),
                                        ),
                                        12..13,
                                    ),
                                ),
                                12..13,
                            ),
                        ],
                    },
                ),
                12..14,
            ),
            else_: (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                3,
                                            ),
                                        ),
                                        19..20,
                                    ),
                                ),
                                19..20,
                            ),
                        ],
                    },
                ),
                19..20,
            ),
        },
    ),
    0..20,
)
