xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__inline_function.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"function($x) { $x }\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    (
                        InlineFunction(
                            InlineFunction {
                                params: [
                                    Param {
                                        name: Name {
                                            name: "x",
                                            namespace: None,
                                        },
                                        type_: None,
                                    },
                                ],
                                return_type: None,
                                body: [
                                    (
                                        Path(
                                            PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        (
                                                            VarRef(
                                                                Name {
                                                                    name: "x",
                                                                    namespace: None,
                                                                },
                                                            ),
                                                            15..17,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                        15..18,
                                    ),
                                ],
                            },
                        ),
                        0..19,
                    ),
                ),
            ],
        },
    ),
    0..19,
)
