xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__inline_function2.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"function($x, $y) { $x + $y }\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    InlineFunction(
                        InlineFunction {
                            params: [
                                Param {
                                    name: Name {
                                        name: "x",
                                        namespace: None,
                                    },
                                    type_: None,
                                },
                                Param {
                                    name: Name {
                                        name: "y",
                                        namespace: None,
                                    },
                                    type_: None,
                                },
                            ],
                            return_type: None,
                            body: [
                                (
                                    Binary(
                                        BinaryExpr {
                                            operator: Add,
                                            left: PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        VarRef(
                                                            Name {
                                                                name: "x",
                                                                namespace: None,
                                                            },
                                                        ),
                                                    ),
                                                ],
                                            },
                                            right: PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        VarRef(
                                                            Name {
                                                                name: "y",
                                                                namespace: None,
                                                            },
                                                        ),
                                                    ),
                                                ],
                                            },
                                        },
                                    ),
                                    19..27,
                                ),
                            ],
                        },
                    ),
                ),
            ],
        },
    ),
    0..28,
)
